--- a/additem.html
+++ b/additem.html
@@ -24,6 +24,7 @@ Project 2 -->
 		<form action="" method="post" id="vehLib">
 			<fieldset id="vehicle">
 				<legend>Add a vehicle</legend>
+				<ul id="error"></ul>
 				<ul id="entry"> 
 					<li>
 						<label for="newUsed">Is this vehicle new or used?</label> 
